--- a/_includes/publications_pdf_and_notes.html
+++ b/_includes/publications_pdf_and_notes.html
@@ -71,9 +71,31 @@
   <span style="display:block; height:0.50em;"></span>
   {% if publication.notes_highlight %}
     <font color="crimson">
-      > {{ publication.notes }}
+      {% if publication.notes_link %}
+        >
+        <a target="_blank" rel="noopener noreferrer" style="color:crimson" href={{ publication.notes_link }}>
+          {{ publication.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
+        </a>
+        {% else %}
+        > {{ publication.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
+        {% endif %}
     </font>
   {% else %}
-    > {{ publication.notes }}
+    {% if publication.notes_link %}
+      >
+      <a target="_blank" rel="noopener noreferrer" href={{ publication.notes_link }}>
+        {{ publication.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
+      </a>
+      {% else %}
+      > {{ publication.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
+      {% endif %}
+    {% endif %}
+  {% if publication.notes_link and publication.notes_link_external %}
+    <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ publication.notes_link }}>
+      <div class="tooltip">
+        <i class="fas fa-external-link-alt fa-xs"></i>
+        <span class="tooltiptext">External link</span>
+      </div>
+    </a>
   {% endif %}
 {% endif %}
