--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
+
+		<link rel="shortcut icon" type="image/png" href="{{ "/assets/favicon.png"  | absolute_url }}">
 	</head>
 
 	<body>
