--- a/_layouts/landingpage.html
+++ b/_layouts/landingpage.html
@@ -22,6 +22,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<link rel="stylesheet" href="/assets/css/typography.css" /> <!-- indeed needs to be ".css", not ".scss", as Jekyll makes conversion from SCSS to CSS! -->
+
+		<link rel="shortcut icon" type="image/png" href="{{ "/assets/favicon.png"  | absolute_url }}">
+
 	</head>
 
 	<body class="landing">
