--- a/_layouts/photography.html
+++ b/_layouts/photography.html
@@ -24,6 +24,8 @@
 		<link rel="stylesheet" href="assets/css/photography.css" />
 		<noscript><link rel="stylesheet" href="assets/css/photography_noscript.css" /></noscript>
 
+		<link rel="shortcut icon" type="image/png" href="{{ "/assets/favicon.png"  | absolute_url }}">
+
 	</head>
 
 	<body class="is-preload">
