--- a/_includes/publications_pdf_and_notes.html
+++ b/_includes/publications_pdf_and_notes.html
@@ -67,13 +67,13 @@
 {% endif %}
 
 <!-- Media coverage -->
-<!-- Insert field in form of "mediacoveragereferrer: mediacoverage_Vivirolietal2020" !! without .yml !! -->
+<!-- Insert field in form of "mediacoveragelist: media_Vivirolietal2020" !! without .yml !! -->
 <!-- In corresponding .yml file add comma for all items except for last... -->
-{% if publication.mediacoveragereferrer %}
+{% if publication.mediacoveragelist %}
   <br>
   <span style="display:block; height:0.50em;"></span>
-  > Media coverage:
-  {% for item in site.data[publication.mediacoveragereferrer] %}
+  > In the media:
+  {% for item in site.data[publication.mediacoveragelist] %}
     <a target='_blank' rel="noopener noreferrer" href={{ item.mediacoveragelink }}>{{ item.mediacoverage }}</a>
   {% endfor %}
 {% endif %}
