--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,25 +6,16 @@
   {% endif %}
   <nav id="nav">
     <ul>
-      {% for entry in site.data.navigation %}
-        <li{{ current }}><a href="{{ entry.url }}">{{ entry.title }}</a>
-        {% if entry.sub_n %}
+      {% for item in site.data.navigation %}
+        <li{{ current }}><a href="{{ item.url }}">{{ item.title }}</a>
+        {% if item.submenu %}
           <ul>
-            <!-- need rather awkward way to check whether "preprints" nees to be excluded if corresponding yaml is not present -->
-            {% if entry.title == "Publications" %}
-              {% if site.data.publications_papers-preprints %}
-                {% assign i_start = 1 %}
+            {% for entry in item.submenu %}
+              {% if site.data.publications_papers-preprints == FALSE and entry.text == "Preprints" %}
               {% else %}
-                {% assign i_start = 2 %}
+                <a href="{{ item.url }}#{{ entry.anchor }}">{{ entry.text }}</a>
+                <br>
               {% endif %}
-            {% else %}
-              {% assign i_start = 1 %}
-            {% endif %}
-            {% for sub_i in ({{i_start}}..{{entry.sub_n}}) %}
-              {% capture dropdown_link %}sub{{sub_i}}_anchor{% endcapture %}
-              {% capture dropdown_text %}sub{{sub_i}}_text{% endcapture %}
-              <a href={{ entry.url }}#{{ entry.[dropdown_link] }}>{{ entry.[dropdown_text] }}</a>
-              {% if sub_i < {{entry.sub_n}} %}<br>{% endif %}
             {% endfor %}
           </ul>
         {% endif %}
