--- a/_includes/publications_pdf_and_notes.html
+++ b/_includes/publications_pdf_and_notes.html
@@ -1,22 +1,22 @@
 
-{% if publication.pdf %}
+{% if item.pdf %}
   <br>
   <span style="display:block; height:0.50em;"></span>
-  {% if publication.pdf_text %}
-	  {% capture pdf_text %}{{ publication.pdf_text }}{% endcapture %}
+  {% if item.pdf_text %}
+	  {% capture pdf_text %}{{ item.pdf_text }}{% endcapture %}
   {% else %}
 	  {% capture pdf_text %}Download pdf{% endcapture %}
   {% endif %}
-  > <a target="_blank" rel="noopener noreferrer" href={{ publication.pdf }}>{{ pdf_text }}</a>
-  {% if publication.pdf_external %}
-    <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ publication.pdf }}>
+  > <a target="_blank" rel="noopener noreferrer" href={{ item.pdf }}>{{ pdf_text }}</a>
+  {% if item.pdf_external %}
+    <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ item.pdf }}>
       <div class="tooltip">
         <i class="fas fa-external-link-alt fa-xs"></i>
         <span class="tooltiptext">External link</span>
       </div>
     </a>
   {% endif %}
-  {% if publication.pdf_openaccess %}
+  {% if item.pdf_openaccess %}
     <div class="tooltip">
       <i class="ai ai-open-access"></i>
       <span class="tooltiptext">Open access</span>
@@ -24,86 +24,68 @@
   {% endif %}
 {% endif %}
 
-{% if publication.link %}
-  <br>
-  <span style="display:block; height:0.50em;"></span>
-  > <a target="_blank" rel="noopener noreferrer" href={{ publication.link }}>{{ publication.link_text }}</a>
-  {% if publication.link_external %}
-    <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ publication.link }}>
-      <div class="tooltip">
-        <i class="fas fa-external-link-alt fa-xs"></i>
-        <span class="tooltiptext">External link</span>
-      </div>
-    </a>
-  {% endif %}
-{% endif %}
-
-{% if publication.link2 %}
-  <br>
-  <span style="display:block; height:0.50em;"></span>
-  > <a target="_blank" rel="noopener noreferrer" href={{ publication.link2 }}>{{ publication.link2_text }}</a>
-  {% if publication.link2_external %}
-    <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ publication.link2 }}>
-      <div class="tooltip">
-        <i class="fas fa-external-link-alt fa-xs"></i>
-        <span class="tooltiptext">External link</span>
-      </div>
-    </a>
-  {% endif %}
-{% endif %}
-
-{% if publication.link3 %}
-  <br>
-  <span style="display:block; height:0.50em;"></span>
-  > <a target="_blank" rel="noopener noreferrer" href={{ publication.link3 }}>{{ publication.link3_text }}</a>
-  {% if publication.link3_external %}
-    <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ publication.link3 }}>
-      <div class="tooltip">
-        <i class="fas fa-external-link-alt fa-xs"></i>
-        <span class="tooltiptext">External link</span>
-      </div>
-    </a>
-  {% endif %}
-{% endif %}
-
-<!-- Media coverage -->
-<!-- Insert field in form of "mediacoveragelist: media_Vivirolietal2020" !! without .yml !! -->
-<!-- In corresponding .yml file add comma for all items except for last... -->
-{% if publication.mediacoveragelist %}
-  <br>
-  <span style="display:block; height:0.50em;"></span>
-  > In the media:
-  {% for item in site.data[publication.mediacoveragelist] %}
-    <a target='_blank' rel="noopener noreferrer" href={{ item.mediacoveragelink }}>{{ item.mediacoverage }}</a>
+{% if item.links %}
+  {% for entry in item.links %}
+    <br>
+    <span style="display:block; height:0.50em;"></span>
+    > <a target="_blank" rel="noopener noreferrer" href={{ entry.url }}>{{ entry.text }}</a>
+    {% if entry.external %}
+      <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ entry.url }}>
+        <div class="tooltip">
+          <i class="fas fa-external-link-alt fa-xs"></i>
+          <span class="tooltiptext">External link</span>
+        </div>
+      </a>
+    {% endif %}
   {% endfor %}
 {% endif %}
 
-{% if publication.notes %}
+<!-- Media coverage -->
+{% if item.mediacoverage %}
   <br>
   <span style="display:block; height:0.50em;"></span>
-  {% if publication.notes_highlight %}
+  > In the media:
+  {% assign items = item.mediacoverage %}
+  {% for entry in item.mediacoverage %}
+    <a target='_blank' rel="noopener noreferrer" href={{ entry.link }}>{{ entry.title }}</a>
+    {% if entry.external %}
+      <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ item.moreinfo_link }}>
+        <div class="tooltip">
+          <i class="fas fa-external-link-alt fa-xs"></i>
+          <span class="tooltiptext">External link</span>
+        </div>
+      </a>
+    {% endif %}
+    {% if entry.title != items.last.title %}· {% endif %}
+  {% endfor %}
+{% endif %}
+
+{% if item.notes %}
+  <br>
+  <span style="display:block; height:0.50em;"></span>
+  {% if item.notes_highlight %}
     <font color="crimson">
-      {% if publication.notes_link %}
+      {% if item.notes_link %}
         >
-        <a target="_blank" rel="noopener noreferrer" style="color:crimson" href={{ publication.notes_link }}>
-          {{ publication.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
+        <a target="_blank" rel="noopener noreferrer" style="color:crimson" href={{ item.notes_link }}>
+          {{ item.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
         </a>
         {% else %}
-        > {{ publication.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
+        > {{ item.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
         {% endif %}
     </font>
   {% else %}
-    {% if publication.notes_link %}
+    {% if item.notes_link %}
       >
-      <a target="_blank" rel="noopener noreferrer" href={{ publication.notes_link }}>
-        {{ publication.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
+      <a target="_blank" rel="noopener noreferrer" href={{ item.notes_link }}>
+        {{ item.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
       </a>
       {% else %}
-      > {{ publication.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
+      > {{ item.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
       {% endif %}
     {% endif %}
-  {% if publication.notes_link and publication.notes_link_external %}
-    <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ publication.notes_link }}>
+  {% if item.notes_link and item.notes_link_external %}
+    <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ item.notes_link }}>
       <div class="tooltip">
         <i class="fas fa-external-link-alt fa-xs"></i>
         <span class="tooltiptext">External link</span>
