--- a/_includes/publications_pdf_and_notes.html
+++ b/_includes/publications_pdf_and_notes.html
@@ -1,13 +1,11 @@
 
 {% if item.pdf %}
-  <br>
-  <span style="display:block; height:0.50em;"></span>
-  {% if item.pdf_text %}
+    {% if item.pdf_text %}
 	  {% capture pdf_text %}{{ item.pdf_text }}{% endcapture %}
   {% else %}
 	  {% capture pdf_text %}Download pdf{% endcapture %}
   {% endif %}
-  > <a target="_blank" rel="noopener noreferrer" href={{ item.pdf }}>{{ pdf_text }}</a>
+  <a target="_blank" rel="noopener noreferrer" href={{ item.pdf }}>{{ pdf_text }}</a>
   {% if item.pdf_external %}
     <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ item.pdf }}>
       <div class="tooltip">
