--- a/_includes/publications_pdf_and_notes.html
+++ b/_includes/publications_pdf_and_notes.html
@@ -1,4 +1,5 @@
 
+<!-- publication pdf -->
 {% if item.pdf %}
     {% if item.pdf_text %}
 	  {% capture pdf_text %}{{ item.pdf_text }}{% endcapture %}
@@ -22,32 +23,16 @@
   {% endif %}
 {% endif %}
 
-{% if item.links %}
-  {% for entry in item.links %}
-    <br>
-    <span style="display:block; height:0.50em;"></span>
-    > <a target="_blank" rel="noopener noreferrer" href={{ entry.url }}>{{ entry.text }}</a>
-    {% if entry.external %}
-      <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ entry.url }}>
-        <div class="tooltip">
-          <i class="fas fa-external-link-alt fa-xs"></i>
-          <span class="tooltiptext">External link</span>
-        </div>
-      </a>
-    {% endif %}
-  {% endfor %}
-{% endif %}
-
-<!-- Media coverage -->
+<!-- media coverage -->
 {% if item.mediacoverage %}
   <br>
   <span style="display:block; height:0.50em;"></span>
   > In the media:
   {% assign items = item.mediacoverage %}
   {% for entry in item.mediacoverage %}
-    <a target='_blank' rel="noopener noreferrer" href={{ entry.link }}>{{ entry.title }}</a>
+    <a target='_blank' rel="noopener noreferrer" href={{ entry.url }}>{{ entry.title }}</a>
     {% if entry.external %}
-      <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ item.moreinfo_link }}>
+      <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ entry.url }}>
         <div class="tooltip">
           <i class="fas fa-external-link-alt fa-xs"></i>
           <span class="tooltiptext">External link</span>
@@ -58,36 +43,39 @@
   {% endfor %}
 {% endif %}
 
+<!-- notes -->
 {% if item.notes %}
-  <br>
-  <span style="display:block; height:0.50em;"></span>
-  {% if item.notes_highlight %}
-    <font color="crimson">
-      {% if item.notes_link %}
+  {% for entry in item.notes %}
+    <br>
+    <span style="display:block; height:0.50em;"></span>
+    {% if entry.highlight %}
+      <font color="crimson">
+        {% if entry.url %}
+          >
+          <a target="_blank" rel="noopener noreferrer" style="color:crimson" href={{ entry.url }}>
+            {{ entry.text | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
+          </a>
+          {% else %}
+          > {{ entry.text | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
+          {% endif %}
+      </font>
+    {% else %}
+      {% if entry.url %}
         >
-        <a target="_blank" rel="noopener noreferrer" style="color:crimson" href={{ item.notes_link }}>
-          {{ item.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
+        <a target="_blank" rel="noopener noreferrer" href={{ entry.url }}>
+          {{ entry.text | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
         </a>
         {% else %}
-        > {{ item.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
+        > {{ entry.text | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
         {% endif %}
-    </font>
-  {% else %}
-    {% if item.notes_link %}
-      >
-      <a target="_blank" rel="noopener noreferrer" href={{ item.notes_link }}>
-        {{ item.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
-      </a>
-      {% else %}
-      > {{ item.notes | markdownify | remove: '<p>' | remove: '</p>' | strip_newlines }}
       {% endif %}
+    {% if entry.url and entry.external %}
+      <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ entry.url }}>
+        <div class="tooltip">
+          <i class="fas fa-external-link-alt fa-xs"></i>
+          <span class="tooltiptext">External link</span>
+        </div>
+      </a>
     {% endif %}
-  {% if item.notes_link and item.notes_link_external %}
-    <a target="_blank" rel="noopener noreferrer" style="text-decoration: none" href={{ item.notes_link }}>
-      <div class="tooltip">
-        <i class="fas fa-external-link-alt fa-xs"></i>
-        <span class="tooltiptext">External link</span>
-      </div>
-    </a>
-  {% endif %}
+  {% endfor %}
 {% endif %}
