--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,14 @@
 	<head>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129681391-1"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-KHHKK5C12Z"></script>
+		<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129681391-1"></script> -->
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
-		  gtag('config', 'UA-129681391-1');
+		  gtag('config', 'G-KHHKK5C12Z');
+			// gtag('config', 'UA-129681391-1');
 		</script>
 
 		<meta charset="utf-8" />
@@ -21,7 +23,7 @@
 		<link rel="stylesheet" href="/assets/css/main.css" />
 
 		<link rel="shortcut icon" type="image/png" href="{{ "/assets/favicon.png"  | absolute_url }}">
-		
+
 	</head>
 
 	<body>
