--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,13 @@
 	<head>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-KHHKK5C12Z"></script>
+		<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHHKK5C12Z"></script> -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129681391-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
-		  gtag('config', 'G-KHHKK5C12Z');
+		  // gtag('config', 'G-KHHKK5C12Z');
 			gtag('config', 'UA-129681391-1');
 		</script>
 
