--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 		<ul class="copyright">
 			<li style="text-align:left">
 					<i class="fas fa-home fa-sm"></i>
-					<a target="_blank" rel="noopener noreferrer" href="http://www.geo.uzh.ch/en/units/h2k">Hydrology and Climate (H<sub>2</sub>K)</a><br>
+					<a target="_blank" rel="noopener noreferrer" href="http://www.geo.uzh.ch/en/units/3g">Glaciology and Geomorphodynamics Group - 3G </a><br>
 					<i class="fas fa-home fa-sm" style="opacity:0.0"></i>
 					Department of Geography<br>
 					<i class="fas fa-home fa-sm" style="opacity:0.0"></i>
@@ -17,15 +17,15 @@
 					CH-8057 Zurich<br>
 			</li>
 			<li style="text-align:left">
-					<a target="_blank" rel="noopener noreferrer"href="mailto:daniel.viviroli@geo.uzh.ch"><i class="far fa-envelope fa-sm"></i> daniel.viviroli-at-geo.uzh.ch</a><br>
-					<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/danielviviroli"><i class="fab fa-twitter fa-am"></i> @danielviviroli</a><br>
+					<a target="_blank" rel="noopener noreferrer"href="mailto:alessandro.cicoira@uzh.ch"><i class="far fa-envelope fa-sm"></i> alessandro.cicoira-at-uzh.ch</a><br>
+					<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Alessandroskji"><i class="fab fa-twitter fa-am"></i> @Alessandroskji</a><br>
 					<br>
 					<br>
 					<br>
 			</li>
 			<li>
 				Website by<br>
-				Daniel Viviroli<br>
+				Alessandro Cicoira<br>
 				CC BY-NC-SA<br>
 				<br>
 				<a target="_blank" rel="noopener noreferrer"href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode">
@@ -37,7 +37,7 @@
 			</li>
 			<li>
 				Images by<br>
-				Daniel Viviroli<br>
+				Alessandro Cicoira<br>
 				All rights reserved<br>
 				<br>
 				<i class="far fa-copyright fa-lg"></i>
