--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header id="header" class={{ page.navtype }}>
   {% if page.navtype != "alt" %}
-    <h1><a href="index.html">Daniel Viviroli</a></h1>
+    <h1><a href="index.html">Alessandro Cicoira</a></h1>
   {% else %}
-    <h1>Daniel Viviroli</h1>
+    <h1>Alessandro Cicoira</h1>
   {% endif %}
   <nav id="nav">
     <ul>
