--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Daniel Viviroli, https://github.com/dviviroli
+	Alessandro Cicoira, https://github.com/acicoira
 	Page uses elements from	«Spatial» by TEMPLATED (https://templated.co>)
 -->
 
@@ -22,7 +22,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
 
-		<link rel="shortcut icon" type="image/png" href="{{ "/assets/favicon.png"  | absolute_url }}">
+		<link rel="shortcut icon" type="image/png" href="{{ "/assets/logo.png"  | absolute_url }}">
 
 	</head>
 
