--- a/_layouts/landingpage.html
+++ b/_layouts/landingpage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Daniel Viviroli, https://github.com/dviviroli
+	Alessandro Cicoira, https://github.com/acicoira
 	Page uses elements from	«Spatial» by TEMPLATED (https://templated.co>)
 -->
 
@@ -17,13 +17,13 @@
 		</script>
 
 		<title>Homepage of Daniel Viviroli</title>
-		<meta name="description" content="Daniel Viviroli's research on water in mountain areas, and selected photographs; mountain hydrology, water resources, natural hazards, flood estimation, hydrological modelling, regionalisation, climate change, global change, water towers" />
+		<meta name="description" content="Alessandro Cicoira's research page; alpine natural hazards and other keywords" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<link rel="stylesheet" href="/assets/css/typography.css" /> <!-- indeed needs to be ".css", not ".scss", as Jekyll makes conversion from SCSS to CSS! -->
 
-		<link rel="shortcut icon" type="image/png" href="{{ "/assets/favicon.png"  | absolute_url }}">
+		<link rel="shortcut icon" type="image/png" href="{{ "/assets/logo.png"  | absolute_url }}">
 
 	</head>
 
