--- a/_layouts/photography.html
+++ b/_layouts/photography.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Daniel Viviroli, https://github.com/dviviroli
+	Alessandro Cicoira, https://github.com/acicoira
 	Page uses elements from «Multiverse» by HTML5 UP ("https://html5up.net/")
 -->
 
@@ -24,7 +24,7 @@
 		<link rel="stylesheet" href="assets/css/photography.css" />
 		<noscript><link rel="stylesheet" href="assets/css/photography_noscript.css" /></noscript>
 
-		<link rel="shortcut icon" type="image/png" href="{{ "/assets/favicon.png"  | absolute_url }}">
+		<link rel="shortcut icon" type="image/png" href="{{ "/assets/logo.png"  | absolute_url }}">
 
 	</head>
 
