--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 					<i class="fas fa-home fa-sm"></i>
 					<a target="_blank" rel="noopener noreferrer" href="https://eclim-research.ch/"> EClim Research Group on Environment and Climate </a><br>
 					<i class="fas fa-home fa-sm"></i>
-					href="http://www.geo.uzh.ch/en/units/3g">Glaciology and Geomorphodynamics - 3G <br>
+					<a target="_blank" rel="noopener noreferrer" href="http://www.geo.uzh.ch/en/units/3g">Glaciology and Geomorphodynamics - 3G </a><br>                
 					<i class="fas fa-home fa-sm" style="opacity:0.0"></i>
 					Department of Geography<br>
 					<i class="fas fa-home fa-sm" style="opacity:0.0"></i>
