--- a/_layouts/landingpage.html
+++ b/_layouts/landingpage.html
@@ -16,7 +16,7 @@
 			gtag('config', 'UA-129681391-1');
 		</script>
 
-		<title>Homepage of Daniel Viviroli</title>
+		<title>Alessandro Cicoira</title>
 		<meta name="description" content="Alessandro Cicoira's research page; alpine natural hazards and other keywords" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
