--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,700);
 
 /*
-	Daniel Viviroli, https://github.com/dviviroli
+	Alessandro Cicoira, https://github.com/acicoira
 	Basis: "Spatial" by TEMPLATED templated.co
 */
 
