--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2906,7 +2906,7 @@
 			}
 
 		#header.alt {
-			background-color: transparent;
+			background-color: #3a3a3a2e;
 			border-bottom: none;
 			box-shadow: none;
 			animation: fadein;
