--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2999,7 +2999,7 @@
 		}
 
 		.navPanelToggle *:before {
-			background: rgb(144, 144, 144, 0.65);
+			background: rgba(144, 144, 144, 0.65);
 			border-radius: 4px;
 			color: #fff;
 			display: block;
