--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2906,12 +2906,12 @@
 			}
 
 		#header.alt {
-			background-color: #fff;
+			background-color: transparent;
 			border-bottom: none;
 			box-shadow: none;
 			animation: fadein;
 			animation-duration: 2.5s;
-			position: relative;
+			position: absolute;
 			/* border: 0; */
 			/* box-shadow: none; */
 			/* height: 3.25em; */
@@ -2922,7 +2922,7 @@
 			#header.alt h1 {
 				color: #ffffff;
 				font-size: 2em;
-				position: absolute;
+				position: relative;
 				left: 0.5em;
 				top: 0em;
 				line-height: 2.2;
@@ -3161,7 +3161,7 @@
     height: 50vh;
     position: absolute;
     left: 50%;
-    top: 60%;
+    top: 50%;
 		/* margin:-25vh 0 0 -50vw; */
     margin: -15vh 0 0 -45vw;
 	}
