--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2906,12 +2906,12 @@
 			}
 
 		#header.alt {
-			Background: cecece42;
+			Background: #cecece42;
 			border-bottom: none;
 			box-shadow: none;
 			animation: fadein;
 			animation-duration: 2.5s;
-			position: absolute;
+			position: relative;
 			/* border: 0; */
 			/* box-shadow: none; */
 			/* height: 3.25em; */
