--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2906,7 +2906,7 @@
 			}
 
 		#header.alt {
-			Background: rgba(144, 144, 144, 0.70);
+			background-color: #cecece10;
 			border-bottom: none;
 			box-shadow: none;
 			animation: fadein;
