commit and push

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2920,7 +2920,7 @@
 
 			/*  Landing page left title */
 			#header.alt h1 {
-				color: #ffffff;
+				color: #d70bb2;
 				font-size: 2em;
 				position: relative;
 				left: 0.5em;
