commit and push

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2906,7 +2906,7 @@
 			}
 
 		#header.alt {
-			background-color: #cecece40;
+			background-color: #2b2b2bb8; /*cecece40
 			border-bottom: none;
 			box-shadow: none;
 			animation: fadein;
