--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
 			</li>
 			<li style="text-align:left">
 					<a target="_blank" rel="noopener noreferrer"href="mailto:alessandro.cicoira@uzh.ch"><i class="far fa-envelope fa-sm"></i> alessandro.cicoira-at-uzh.ch</a><br>
-					<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Alessandroskji"><i class="fab fa-twitter fa-am"></i> @Alessandroskji</a><br>
+					<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/a_cicoira"><i class="fab fa-twitter fa-am"></i> @a_cicoira</a><br>
 					<br>
 					<br>
 					<br>
