--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,8 +25,7 @@
 			</li>
 			<li>
 				Website by<br>
-				Alessandro Cicoira<br>
-				and Daniel Viviroli<br>
+				Daniel Viviroli<br>
 				CC BY-NC-SA<br>
 				<br>
 				<a target="_blank" rel="noopener noreferrer"href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode">
