--- a/_layouts/photography.html
+++ b/_layouts/photography.html
@@ -85,4 +85,4 @@
 	</body>
 </html>
 
-{% capture captions %}{% _data captions.yml %}{% endcapture %}
+{% capture captions %}{% include captions.yml %}{% endcapture %}
