commit and push

--- a/_layouts/photography.html
+++ b/_layouts/photography.html
@@ -85,4 +85,4 @@
 	</body>
 </html>
 
-{% capture captions %}{% include caption.yml %}{% endcapture %}
+{% capture captions %}{% include _data/caption.yml %}{% endcapture %}
