--- a/_layouts/photography.html
+++ b/_layouts/photography.html
@@ -85,4 +85,5 @@
 	</body>
 </html>
 
-{% capture captions %}{% include _data/caption.yml %}{% endcapture %}
+{% capture captions %}{% include captions.yml %}{% endcapture %}
+
