commit and push

--- a/_layouts/photography.html
+++ b/_layouts/photography.html
@@ -85,5 +85,5 @@
 	</body>
 </html>
 
-{% capture captions %}{% include captions.yml %}{% endcapture %}
+{% capture captions %}{% _data/ captions.yml %}{% endcapture %}
 
