commit and push

--- a/_layouts/photography.html
+++ b/_layouts/photography.html
@@ -85,5 +85,6 @@
 	</body>
 </html>
 
-{% capture captions %}{% _data/ captions.yml %}{% endcapture %}
+{% capture captions %}{% assign captions = site.data.captions %}{% endcapture %}
+
 
